<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <ToggleButton
        android:id="@+id/toggle_frequency_details_sunday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_sun_abbr"
        android:textOn="@string/weekday_picker_sun_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_monday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_mon_abbr"
        android:textOn="@string/weekday_picker_mon_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_tuesday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_tue_abbr"
        android:textOn="@string/weekday_picker_tue_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_wednesday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_wed_abbr"
        android:textOn="@string/weekday_picker_wed_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_thursday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_thu_abbr"
        android:textOn="@string/weekday_picker_thu_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_friday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_fri_abbr"
        android:textOn="@string/weekday_picker_fri_abbr"
        />
    <ToggleButton
        android:id="@+id/toggle_frequency_details_saturday"
        android:layout_width="0dp"
        android:layout_height="@dimen/weekday_picker_toggle_height"
        android:layout_weight="1"
        android:button="@null"
        android:background="@null"
        android:checked="false"
        android:drawablePadding="@dimen/weekday_picker_toggle_label_v_offset"
        android:drawableTop="@drawable/radiobutton_weekday"
        android:gravity="center"
        android:textOff="@string/weekday_picker_sat_abbr"
        android:textOn="@string/weekday_picker_sat_abbr"
        />
</androidx.appcompat.widget.LinearLayoutCompat>